Full-width container example added to grid page and HTML build (issue #22)

--- a/source/layouts/grid.html
+++ b/source/layouts/grid.html
@@ -19,20 +19,9 @@
 	<section id="page-content" class="clearfix">
 		<div class="ctn-container">
 		  <div class="post">
-
-
-<!--
-        <header class="post-header">
-          <h1>Page Title</h1>
-        </header>
--->
-
         
         <article class="post-content">
         <!-- content -->
-
-	  
-
 
 <!-- build:include ../partials/_grid/_general-grid.html --><!-- /build -->
 
@@ -42,7 +31,17 @@
 
 <!-- build:include ../partials/_grid/_push-pull-grid.html --><!-- /build -->
 
-  
+        </article>
+		  </div>
+		</div>
 
+		<div class="ctn-container ctn-container-full">
+		  <div class="post">
+        
+        <article class="post-content">
+        <!-- content -->
+        
+<!-- build:include ../partials/_grid/_full-width-grid.html --><!-- /build -->
+  
 
 <!-- build:include ../partials/_layout-bottom.html --><!-- /build -->
