colors - capitalizing colors (got bored)

--- a/lib/sass/centurion/_colors.scss
+++ b/lib/sass/centurion/_colors.scss
@@ -6,8 +6,8 @@ $black: #000;
 $off-white: #efefef;
 
 $grey: #999999;
-$light-grey: #cccccc;
-$lighter-grey: #dddddd;
+$light-grey: #CCCCCC;
+$lighter-grey: #EDEDED;
 $dark-grey: #555555;
 $darker-grey: #333333;
 
