minor bug in default line height (1.5) being set on body.

--- a/lib/sass/centurion.scss
+++ b/lib/sass/centurion.scss
@@ -12,7 +12,7 @@ $lang-front: left;
 
 body {
   font-size: 100%;
-  line-height: $default-line-height;
+  line-height: 1;
 }
 
 @include normalize;
