--- a/lib/sass/centurion/_tables.scss
+++ b/lib/sass/centurion/_tables.scss
@@ -38,32 +38,34 @@
 
 @mixin tables() {
   table {
+    @extend %typography;
     background: $white;
     border-collapse: collapse;
     border-spacing: 0;
-    color: #333333;
-    @include element-spacing(vertical, margin, 1em);
+    color: $dark-grey;
+    @include rem(font-size, $default-font-size);
+    @include element-spacing(vertical, margin, $default-font-size);
     width: 100%;
   }
   
   thead,
   tfoot {
-    line-height: 1.5;
-    @include element-spacing(two, padding, 0.4em, 0.667em);
     text-align: left;
     th,
     td {
       background-color: $light-grey;
       color: $white;
       font-weight: bold;
-      @include element-spacing(two, padding, 0.4em, 0.667em);
+      line-height: normal;
+      @include element-spacing(two, padding, 10, 12);
+      vertical-align: middle;
     }
   }
   
   tbody {
     tr,
     td {
-      @include element-spacing(two, padding, 0.4em, 0.667em);
+      @include element-spacing(two, padding, 8, 12);
     }
     tr {
       &.odd {
