--- a/lib/sass/centurion/_grid.scss
+++ b/lib/sass/centurion/_grid.scss
@@ -3,22 +3,25 @@
 
 // Column Grid
 @mixin column-grid {  
+
   %column-base {
     @include box-sizing(border-box);
     float: $lang-front;
     padding: 0 $gutter / 2 + $value;
     position: relative;
+    @extend %clearfix;
   }
-  
+
   /* Large Destkop Grid */
   /* ---------------------------- */
   .#{$container-class} {
     @extend %clearfix;
     margin: 0 auto;
     padding: 0;
-    width: $desktop-width + $value;
-    
-    @include grid-creator(desktop);
+    width: $d-width + $value;
+
+    @include grid-generate($d-columns, $d-width, $grid-class);
+    @include push-pull($d-columns, $d-width, $push-class, $pull-class);
   }
   
   /* Full Width Container */
@@ -28,152 +31,125 @@
   
   /* Small Desktop Grid */
   /* ---------------------------- */
-  @media screen and (max-width: $desktop-width + $value) {
+  @media screen and (max-width: $d-width + $value) {
     .#{$container-class} {
       width: 100%;
     }
-    @include show-hide(desktop);
+    @include show-hide-view(desktop);
   }
-  
   /* Tablet Grid */
   /* ---------------------------- */
-  @media screen and (max-width: $tablet-width + $value) {
-    @include grid-creator(tablet);
+  @media screen and (max-width: $t-width + $value) {
+    .#{$container-class} {
+      %t-full-width {
+        width: 100%;
+      }
+      %t-no-push-pull {
+        left: 0;
+      }
+      @include grid-generate($t-columns, $t-width, $t-grid-class, tablet);
+      @include push-pull($t-columns, $t-width, $t-push-class, $t-pull-class, tablet);
+    }
   }
-    
   /* Mobile Grid */
   /* ---------------------------- */
-  @media screen and (max-width: $mobile-width + $value) {
-    @include grid-creator(mobile);
+  @media screen and (max-width: $m-width + $value) {
+    .#{$container-class} {
+      %m-full-width {
+        width: 100%;
+      }
+      %m-no-push-pull {
+        left: 0;
+      }
+      @include grid-generate($m-columns, $m-width, $m-grid-class, mobile);
+      @include push-pull($m-columns, $m-width, $m-push-class, $m-pull-class, mobile);
+    }
   }
-  @include center-grid-elements();
-  
+  @include center-grid-elements();  
   @include clearfix();
 }
 
-// Grid Creator - stitches the magic together
-@mixin grid-creator($type) {
-  
-  $push-elem-desktop: $prefix-class+'-'+$push-class;
-  $pull-elem-desktop: $prefix-class+'-'+$pull-class;
-  
-  $push-elem-tablet: $tablet-grid-class+'-'+$push-class;
-  $pull-elem-tablet: $tablet-grid-class+'-'+$pull-class;
-  
-  $push-elem-mobile: $mobile-grid-class+'-'+$push-class;
-  $pull-elem-mobile: $mobile-grid-class+'-'+$pull-class;
-
-  @if $type == desktop {
-    @include grid-generate($desktop-columns, $desktop-width, $grid-class, true);    
-    @include push-pull-elements($desktop-columns, $push-elem-desktop, $pull-elem-desktop);
-    @include no-margin();
-  }
-  
-  @if $type == tablet {
-    @include adjust-grid($tablet-columns, $desktop-columns, $grid-class, tablet);
-    @include adjust-push-pull($tablet-columns, $desktop-columns, $push-elem-desktop, $pull-elem-desktop, tablet);
-    .#{$container-class} {
-      %full-width-tablet {
-        width: 100%;
-      }
-      %no-push-pull-tablet {
-        left: 0;
-      }      
-      @include grid-generate($tablet-columns, $tablet-width, $tablet-grid-class);
-      @include push-pull-elements($tablet-columns, $push-elem-tablet, $pull-elem-tablet);
-    }
-    @include show-hide(tablet);
-  }
-  
-  @if $type == mobile {
-    @include adjust-grid($mobile-columns, $desktop-columns, $grid-class, mobile);
-    @include adjust-push-pull($mobile-columns, $desktop-columns, $push-elem-desktop, $pull-elem-desktop, mobile);
-    @include adjust-grid($mobile-columns, $tablet-columns, $tablet-grid-class, mobile);
-    @include adjust-push-pull($mobile-columns, $tablet-columns, $push-elem-tablet, $pull-elem-tablet, mobile);
-    .#{$container-class} {
-      %full-width-mobile {
-        width: 100%;
-      }
-      @include grid-generate($mobile-columns, $mobile-width, $mobile-grid-class);
-      @include push-pull-elements($mobile-columns, $push-elem-mobile, $pull-elem-mobile);
-      %no-push-pull-mobile {
-        #{$lang-front}: 0;
-      }
-    }
-    @include show-hide(mobile);
-  }
-}
-
-// Generate grid columns
-@mixin grid-generate($columns, $width, $class, $exclude: false) {
+// Generate grid
+@mixin grid-generate($columns, $width, $class, $resp:null) {
   @for $i from 1 through $columns {
-    $num: $i;
-    $calc-width: $width / $columns;
-    $percent: 100 / $columns * $i * 1%;
-    $decimal: $num * $calc-width / $columns;
-    
     .#{$class}-#{$i} {
-      @extend %column-base;
-      @extend %clearfix;
-      width: $percent;
-      
-      @if $exclude == true {}
-      // @TODO: work on optimizing IE7 grid support in _grid-legacy.scss
-      //@include ie7-grid-element($decimal);
+      //@at-root (without: media) {
+        @extend %column-base;
+        @extend %clearfix;
+      //}
+      width: grid-percent($columns, $width, $i);
     }
   }
-
-  @include nested-grid-elements($class);
+  @if $resp == "tablet" {
+    /* adjust desktop  */
+    @include adjust-grid($columns, $d-columns, $grid-class, t-full-width);
+  }
+  @if $resp == "mobile" {
+    @include adjust-grid($columns, $d-columns, $grid-class, m-full-width);
+    @include adjust-grid($columns, $t-columns, $t-grid-class, m-full-width);
+  }
+  
+  @include nested-grid-elements();
 }
 
-// Adjust Grid for Responsive
-@mixin adjust-grid($columns, $column-count, $class, $respond) {
-  @for $i from 1 through $column-count {
-    $percent: 100 / $columns * $i * 1%;
-    @if $i < $columns + 1 {
+// Function: figure out grid percentage
+@function grid-percent($grid-columns, $container-width, $i) {
+  $percent: 100 / $grid-columns * $i * 1%;
+  @return $percent;
+}
+
+// Adjust Grid on Smaller Devices (Tablets and Mobile
+@mixin adjust-grid($columns, $columns-count, $class, $extend:null) {
+  @for $i from 1 through $columns-count {
+    @if $i < $columns {
       .#{$class}-#{$i} {
-        width: $percent;
+        width: grid-percent($columns, $d-width, $i);
       }
     }
-    @if $i > $columns {
+    @if $i > $columns - 1 {
       .#{$class}-#{$i} {
-        @extend %full-width-#{$respond};
+        @extend %#{$extend};
       }
     }
   }
-} 
+}
 
-// Push & Pull Grid Element
-@mixin push-pull-elements($columns, $push-elem, $pull-elem) {
+// Push and Pull for Grid Elements
+@mixin push-pull($columns, $width, $push-elem, $pull-elem, $resp:null) {
   @for $i from 1 through $columns {
-    $percent: 100 / $columns * $i * 1%;
-    @if $i < $columns + 1 {
+    @if $i < $columns { // to push full columns add +1
       .#{$push-elem}-#{$i} {
-        #{$lang-front}: $percent;
+        #{$lang-front}: grid-percent($columns, $width, $i);
       }
       .#{$pull-elem}-#{$i} {
-        #{$lang-front}: -$percent;
+        #{$lang-front}: (grid-percent($columns, $width, $i)) * -1;
       }
     }
   }
+  @if $resp == "tablet" {
+    @include adjust-push-pull($columns, $d-columns, $push-class, $pull-class, t-no-push-pull);
+  }
+  @if $resp == "mobile" {
+    @include adjust-push-pull($columns, $d-columns, $push-class, $pull-class, m-no-push-pull);
+    @include adjust-push-pull($columns, $t-columns, $t-push-class, $t-pull-class, m-no-push-pull);
+  }
 }
 
-// Adjust Push and Pull for Responsive
-@mixin adjust-push-pull($columns, $column-count, $push-elem, $pull-elem, $respond) {
-  @for $i from 1 through $column-count {
-    $percent: 100 / $columns * $i * 1%;
-    @if $i < $columns + 1 {
+// Adjust Push / Pull for Smaller Devices (Tablet and Mobile)
+@mixin adjust-push-pull($columns, $columns-count, $push-elem, $pull-elem, $extend:null) {
+  @for $i from 1 through $columns-count {
+    @if $i < $columns {
       .#{$push-elem}-#{$i} {
-        #{$lang-front}: $percent;
+        #{$lang-front}: grid-percent($columns, $d-width, $i);
       }
       .#{$pull-elem}-#{$i} {
-        #{$lang-front}: -$percent;
+        #{$lang-front}: (grid-percent($columns, $d-width, $i)) * -1;
       }
     }
-    @if $i > $columns {
+    @if $i > $columns - 1 {
       .#{$push-elem}-#{$i},
       .#{$pull-elem}-#{$i} {
-        @extend %no-push-pull-#{$respond};
+        @extend %#{$extend};
       }
     }
   }
@@ -186,7 +162,7 @@
       padding-left: 0;
     }
     [class*=#{$class}]:last-of-type {
-      padding-left: 0;
+      // padding-left: 0;
       padding-right: 0;
     }
   }
