--- a/lib/sass/centurion/_colors.scss
+++ b/lib/sass/centurion/_colors.scss
@@ -12,19 +12,19 @@ $dark-grey: #555555;
 $darker-grey: #333333;
 
 $red: #cc583a;
-$dark-red: darken($red, 20%);
+$dark-red: darken($red, 10%);
 $light-red: lighten($red, 30%);
 
-$blue: #272d7f;
-$dark-blue: darken($blue, 20%);
+$blue: #1F468D;
+$dark-blue: darken($blue, 10%);
 $light-blue: lighten($blue, 30%);
 
 $purple: #7f4d7b;
-$dark-purple: darken($purple, 20%);
+$dark-purple: darken($purple, 10%);
 $light-purple: lighten($purple, 30%);
 
 $green: #277f35;
-$dark-green: darken($green, 20%);
+$dark-green: darken($green, 10%);
 $light-green: lighten($green, 30%);
 
 $orange: #fe9300;
